Aggiorna i link in index.html per riflettere le nuove FAQ

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
             <p>
                 an Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
-                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description" target="_blank">
+                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=FAQ%20About" target="_blank">
                     />
                 </a>
                 <br>
@@ -78,7 +78,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1> 
             <p>
                 to empower users with predictive analytics, mentoring, and interactive simulations, unlocking new paths for learning, exploration, and growth.
-                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview" target="_blank">
+                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=FAQ%20Features" target="_blank">
                     />
                 </a>
                 <br>
@@ -88,7 +88,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
             <p>
                 predictive models, multidimensional simulations, emotional insights, and multilingual adaptability. GENiALABILE is built to go beyond limits.
-                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview" target="_blank">
+                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=FAQ%20Special" target="_blank">
                     />
                 </a>
                 <br>
@@ -98,7 +98,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
             <p>
                 in education, research, coaching, therapy, and creative development. GENiALABILE adapts to your needs, turning challenges into solutions. 
-                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20and%20Bio-Feedback%20Practical%20Applications%20-%20Detailed%20examples" target="_blank">
+                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=FAQ%20Support%20Mission" target="_blank">
                     />
                 </a>
                 <br>
@@ -108,7 +108,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
             <p>
                 with AR, VR, and immersive simulations like Sora, and augmented reality simulations for new educational and therapeutic experiences.
-                    <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments" target="_blank">
+                    <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=FAQ%20Future%20Applications" target="_blank">
                         />
                     </a>
                 <br>
@@ -118,7 +118,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
             <p>
                 to building a future where learning and creativity transcend boundaries.
-                    <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Complete%20Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details" target="_blank">
+                    <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=FAQ%20Humans" target="_blank">
                         />
                     </a>
                 <br>
