--- a/contacts.html
+++ b/contacts.html
@@ -69,7 +69,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <br><br>
                 If you have any questions, feedback, or inquiries about GENiALABILE, feel free to reach out to us using the information below.
                 <br>
-                <a href="mailto:genialabile@gmail.com?subject=Request%20for%20Beta%20Access&body=Hello!%20I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">
+                <a href="mailto:genialabile@gmail.com?subject=Beta%20Access&body=Hello!>
                     Join
                 </a>
                 in our preview access for beta tester.
