--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
             <p>
                 running as a beta version in preview access.
-                <a href="mailto:genialabile@gmail.com?subject=Request%20for%20Beta%20Access&body=Hello!%20I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">
+                <a href="mailto:genialabile@gmail.com?subject=Beta%20Access&body=Hello!>
                     />
                 </a>
                 <br>
