Correggi la sintassi del link email per la richiesta di accesso beta in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
             <p>
                 running as a beta version in preview access.
-                <a href="mailto:genialabile@gmail.com?subject=Beta%20Access&body=Hello!>
+                <a href="mailto:genialabile@gmail.com?subject=Beta%20Access&body=Hello!">
                     />
                 </a>
                 <br>
