--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
             <p>
                 predictive models, multidimensional simulations, emotional insights, and multilingual adaptability. GENiALABILE is built to go beyond limits.
-                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=FAQ%20Feedback" target="_blank">
+                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=FAQ%20BioFeedback" target="_blank">
                     />
                 </a>
                 <br>
