Modifica il formato della data e aggiorna il titolo della sezione "Virtual Address" in "Business Card" in contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -58,8 +58,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <main>
             
             <h1>Contact Us</h1>
-            <p style="font-size: 0.6rem;">
-                {Last Updated: 10 January 2025}
+            <p class="txt-mini">
+                Last Updated: 10 January 2025
             </p>
 
             <p class="imp-l">
@@ -142,7 +142,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </p>
                 <br><br><br>
            
-                <b>5. Virtual Address</b>
+                <b>5. Business  Card</b>
                 <br><br>
                 <div class="card">
                     <div class="card-image-container">
@@ -154,7 +154,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             <br>
                             Multidimensional Ave,
                             <br>
-                            GPT's City, API, 2025
+                            < a href="https://openai.com/"
+                                OpenAI
+                            </a>
+                            City, API, 2025
                         </p>
                     </div>
                 </div>
