--- a/Writer-Script-Guide.htm
+++ b/Writer-Script-Guide.htm
@@ -17,7 +17,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -------------------------------------------------------------------------------
 
 # Version: v2.1
-# URL: https://genialabile.com/new-page.html
+# URL: https://genialabile.com/Writer-Script-Guide.html
 ===============================================================================
 -->
 
