--- a/Writer-Script-Guide.htm
+++ b/Writer-Script-Guide.htm
@@ -24,8 +24,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>GENiALABILE | New Page</title>
-        <meta name="description" content="GENiALABILE - New Page Content.">
+        <title>GENiALABILE | Guide Page</title>
+        <meta name="description" content="GENiALABILE - Writer Fx Guide.">
         <link rel="canonical" href="https://genialabile.com/new-page.html">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
