Aggiorna i link nella sezione live-fx per puntare a Google

--- a/live-fx.html
+++ b/live-fx.html
@@ -271,11 +271,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     `<b>0. Welcome to GENiALABILE</b><br><br>
                     GENiALABILE does not use cookies for tracking users, analyzing performance, or delivering personalized content.<br>
                     Questo testo mostra il <b>grassetto</b> e un link: 
-                    <a href="https://example.com" target="_blank" style="color:#00bbff;">Example</a>.<br><br><br>`,
+                    <a href="https://google.com/" target="_blank" style="color:#00bbff;">Example</a>.<br><br><br>`,
             
                     `<b>1. Next Section</b><br><br>
                     Ulteriore testo con <b>grassetto</b> e un altro link: 
-                    <a href="https://another-example.com" target="_blank" style="color:#00bbff;">Another Example</a>.<br><br><br>`
+                    <a href="https://google.com/" target="_blank" style="color:#00bbff;">Another Example</a>.<br><br><br>`
                 ];
             
                 const typingSpeed = 30; // Millisecondi tra ogni carattere
