--- a/live-fx.html
+++ b/live-fx.html
@@ -257,7 +257,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         
             <script>
                 const textArray = [
-                    `<b>0. Welcome to GENiALABILE</b><br>
+                    `<b>0. Welcome to GENiALABILE ——TEST</b><br>
                     GENiALABILE does not use cookies for tracking users, analyzing performance, or delivering personalized content.<br>
                     Questo testo mostra il <b>grassetto</b> e un link: 
                     <a href="https://example.com" target="_blank" style="color:#00bbff;">Example</a>.<br><br>`,
