Migliora lo stile CSS e la leggibilità del testo nella sezione live-fx

--- a/live-fx.html
+++ b/live-fx.html
@@ -207,6 +207,43 @@ Use, distribution, or modification of this project is strictly prohibited withou
             /*---// ENDLINE & SAY BYE //---*/
 
             /* CSS ANIMAZIONE SCRITTURA DA MODIFICARE */
+
+
+
+
+
+
+
+            h1, h2, h3, .section-title {
+                color: var(--accent);
+                margin-bottom: 0.5rem;
+                text-align: left; /* Allinea a sinistra */
+                padding-left: 0; /* Nessun padding a sinistra */
+            }
+
+            p, ul, div {
+                margin: 0 auto;
+                padding: 0;
+                text-align: left; /* Allinea il testo */
+                line-height: 1.5; /* Migliora la leggibilità */
+                padding-left: 2rem; /* Aggiungi spazio coerente per il testo sotto i titoli */
+            }
+
+            .section {
+                margin-top: 2rem; /* Spazio tra le sezioni */
+                text-align: left;
+            }
+
+            #typing-effect {
+                font-family: 'Inconsolata', monospace;
+                font-size: 20px;
+                color: #00ff00;
+                white-space: pre-wrap;
+                word-wrap: break-word;
+                overflow-wrap: break-word;
+                text-align: left; /* Allinea tutto il contenuto a sinistra */
+                line-height: 1.5; /* Spaziatura del testo */
+            }
             #typing-effect {
                 font-family: 'Inconsolata', monospace;
                 font-size: 20px;
@@ -233,6 +270,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 content: "";
                 animation: none;
             }
+
+
+
+
+
+
+
+
+
+
             /* CSS ANIMAZIONE SCRITTURA DA MODIFICARE */
         </style>
              
@@ -257,7 +304,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         
             <script>
                 const textArray = [
-                    `<b>0. Welcome to GENiALABILE ——TEST</b><br>
+                    `<b>0. Welcome to GENiALABILE ——TEST</b>
                     GENiALABILE does not use cookies for tracking users, analyzing performance, or delivering personalized content.<br>
                     Questo testo mostra il <b>grassetto</b> e un link: 
                     <a href="https://example.com" target="_blank" style="color:#00bbff;">Example</a>.<br><br>`,
