--- a/live-fx.html
+++ b/live-fx.html
@@ -271,14 +271,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 animation: none;
             }
 
-
-
-
-
-
-
-
-
+            #typing-container {
+                width: 100%;
+                text-align: center; /* Centra il contenuto */
+            }
 
             /* CSS ANIMAZIONE SCRITTURA DA MODIFICARE */
         </style>
@@ -307,11 +303,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     `<b>0. Welcome to GENiALABILE ——TEST</b>
                     GENiALABILE does not use cookies for tracking users, analyzing performance, or delivering personalized content.<br>
                     Questo testo mostra il <b>grassetto</b> e un link: 
-                    <a href="https://example.com" target="_blank" style="color:#00bbff;">Example</a>.<br><br>`,
+                    <a href="https://google.com" target="_blank" style="color:#00bbff;">Example</a>.<br><br>`,
             
-                    `<b>1. Next Section</b><br>
+                    `<b>1. Next Section</b>
                     Ulteriore testo con <b>grassetto</b> e un altro link: 
-                    <a href="https://another-example.com" target="_blank" style="color:#00bbff;">Another Example</a>.<br><br>`
+                    <a href="https://google.com" target="_blank" style="color:#00bbff;">Another Example</a>.<br><br>`
                 ];
             
                 const typingSpeed = 30; // Millisecondi tra ogni carattere
