Corregge il testo di benvenuto nella sezione live-fx

--- a/live-fx.html
+++ b/live-fx.html
@@ -300,7 +300,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         
             <script>
                 const textArray = [
-                    `<b>0. Welcome to GENiALABILE ——TEST</b>
+                    `<b>0. Welcome to GENiALABILE TEST</b>
                     GENiALABILE does not use cookies for tracking users, analyzing performance, or delivering personalized content.<br>
                     Questo testo mostra il <b>grassetto</b> e un link: 
                     <a href="https://google.com" target="_blank" style="color:#00bbff;">Example</a>.<br><br>`,
