Modifica l'allineamento del contenuto nella sezione live-fx e aggiorna il testo di benvenuto

--- a/live-fx.html
+++ b/live-fx.html
@@ -273,7 +273,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
             #typing-container {
                 width: 100%;
-                text-align: center; /* Centra il contenuto */
+                text-align: left; 
+                padding-left: 2rem; /* se desideri lo stesso indent dei paragrafi */
             }
 
             /* CSS ANIMAZIONE SCRITTURA DA MODIFICARE */
@@ -300,7 +301,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         
             <script>
                 const textArray = [
-                    `<b>0. Welcome to GENiALABILE TEST</b>
+                    `<b>0. Welcome to GENiALABILE TEST———</b>
                     GENiALABILE does not use cookies for tracking users, analyzing performance, or delivering personalized content.<br>
                     Questo testo mostra il <b>grassetto</b> e un link: 
                     <a href="https://google.com" target="_blank" style="color:#00bbff;">Example</a>.<br><br>`,
