Aggiorna la formattazione e il contenuto della sezione live-fx

--- a/writer-guide.htm
+++ b/writer-guide.htm
@@ -242,7 +242,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
             #typing-effect::after {
                 content: "*⌝";
                 animation: blink 1s steps(1) infinite;
-                font-size: 1.5rem;
+                font-size: 1.3rem;
+                font-weight: normal;
                 display: inline; /* Evita che il cursore vada a capo */
             }
         
