Aggiunge nuovi testi e link nella sezione di guida per migliorare il contenuto

--- a/writer-guide.html
+++ b/writer-guide.html
@@ -346,7 +346,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     const textArray = [
                         "<b>Primo testo</b><br>Bla bla bla bla bla bla bla bla bla a bla bla bla bla bla a bla bla bla bla bla a bla bla bla bla bla a bla bla———bla bla bla a bla bla bla bla bla a bla bla bla bla bla a bla bla bla bla bla bla bla bla.",
                         "<b>Secondo testo</b><br>Bla bla bla bla bla bla bla bla bla bla bla bla.",
+                        "<b>Terzo LInK</b><br><a href='https://genialabile.com/'>GENiALABILE</a>.",
+                        
+                        "<b>PRIMO TESTO:</b><br>Bla bla bla bla bla bla bla bla bla a bla bla bla bla bla a bla bla bla bla bla a bla bla bla bla bla a bla bla———bla bla bla a bla bla bla bla bla a bla bla bla bla bla a bla bla bla bla bla bla bla bla.",
+                        "<b>Secondo testo</b><br>Bla bla bla bla bla bla bla bla bla bla bla bla.",
+                        "<b>Terzo testo</b><br>Bla bla bla bla bla bla bla bla bla bla bla bla.",
+
+                        "<i>Primo Corsivo</i><br>Bla bla bla bla bla bla bla bla bla a bla bla bla bla bla a bla bla bla bla bla a bla bla bla bla bla a bla bla———bla bla bla a bla bla bla bla bla a bla bla bla bla bla a bla bla bla bla bla bla bla bla.",
+                        "<b>Secondo testo</b><br>Bla bla bla bla bla bla bla bla bla bla bla bla.",
                         "<b>Terzo testo</b><br>Bla bla bla bla bla bla bla bla bla bla bla bla."
+
                     ];
                 
                     const typingSpeed = 30; // Velocità di digitazione (ms)
