Aggiunge padding-bottom nel file writer-guide.html per creare spazio per il footer dinamico

--- a/writer-guide.html
+++ b/writer-guide.html
@@ -134,9 +134,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     max-width: 100%;
                     color: var(--info-text);
                     margin: 0 auto;
-                
-
                     padding: var(--spacing);
+
+
+                    padding-bottom: 50%; /* Spazio per il footer dinamico */
                 }
         
                 footer {
