Aggiorna il padding del footer in writer-guide.html per rimuovere padding-top e padding-bottom

--- a/writer-guide.html
+++ b/writer-guide.html
@@ -142,7 +142,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
         
                 footer {
                     width: 100%;
-                    padding:  var(--spacing);               /* 0rem;            /*  OG */
+                    padding:  var(--spacing); 
+
+                    padding-bottom: 0rem;  
+                    padding-top: 0rem; /* 0rem;            /*  OG */
+                    
                     text-align: left;
                     background-color: var(--info-background);
                     color: var(--info-text);
