--- a/writer-guide.html
+++ b/writer-guide.html
@@ -158,6 +158,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     margin: 0 auto;
                     padding: var(--spacing);
                     padding-bottom: 5rem; /* Spazio riservato per il footer */
+                    overflow-x: hidden;
                 }
 
 
@@ -204,6 +205,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     background-color: var(--info-background);
                     color: var(--info-text);
                     margin: 0 auto;
+                    overflow-x: hidden;
         
 
 
