Modifica la posizione del footer in writer-guide.html da absolute a fixed per mantenerlo sempre visibile in fondo alla pagina

--- a/writer-guide.html
+++ b/writer-guide.html
@@ -358,7 +358,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             /*---// FOOTER BANNER //--- */
 
                         #footer-banner {
-                position: absolute; /* Mantiene il footer fisso */
+                position: fixed; /* Mantiene il footer fisso */
                 bottom: 0;
                 left: 0;
                 width: 100%;
