--- a/writer-guide.html
+++ b/writer-guide.html
@@ -183,7 +183,15 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 @media screen and (max-width: 768px) {
                     #footer-banner {
                         padding: 1rem; /* Riduci il padding per dispositivi mobili */
-                        font-size: 14px; /* Regola la dimensione del testo */
+
+                      /*  ==================================== */
+
+                        /* font-size: 14px;  Regola la dimensione del testo */
+
+                            
+                        /* ==== ultima modifica prima del push 16:16 NMS factor
+                        
+                        ================================ */
                     }
 
                     main {
