--- a/writer-guide.html
+++ b/writer-guide.html
@@ -182,7 +182,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
                 @media screen and (max-width: 768px) {
                     #footer-banner {
-                        padding: 1rem; /* Riduci il padding per dispositivi mobili */
+                        padding: var(--spacing); /* Riduci il padding per dispositivi mobili */
 
                       /*  ==================================== */
 
@@ -375,7 +375,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 color: var(--info-text);
                 text-align: center;
 
-                
+
                 padding: var(--spacing); /* Usa la stessa spaziatura del CSS master */
                 /* ==== ultima modifica prima del push 16:16 NMS factor
                         ================================ */
