Aggiungi overflow-x hidden nel footer di writer-guide.html per prevenire lo scorrimento laterale

--- a/writer-guide.html
+++ b/writer-guide.html
@@ -108,6 +108,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     font-size: var(--font-size);
                     margin: 0;
                     padding: var(--spacing);
+                    overflow-x: hidden; /* Impedisce lo scorrimento laterale */
 
                      /* FANCY-FX */
                     /* FANCY-FX */
@@ -201,6 +202,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 footer {
                     width: 100%;
                     padding:  var(--spacing); 
+                    overflow-x: hidden; /* Impedisce lo scorrimento laterale */
 
 
 
