Modifica il padding destro del footer in writer-guide.html per migliorare la visualizzazione su dispositivi mobili

--- a/writer-guide.html
+++ b/writer-guide.html
@@ -184,6 +184,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 @media screen and (max-width: 768px) {
                     #footer-banner {
                         padding: var(--spacing); /* Riduci il padding per dispositivi mobili */
+                        padding-right: 1%;
 
                       /*  ==================================== */
 
