--- a/writer-guide.html
+++ b/writer-guide.html
@@ -184,11 +184,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 @media screen and (max-width: 768px) {
                     #footer-banner {
                         padding: var(--spacing); /* Riduci il padding per dispositivi mobili */
-                        padding-right: 1%;
+                        padding-right: 0%;
 
-                      /*  ==================================== */
+                    
 
-                        /* font-size: 14px;  Regola la dimensione del testo */
+                        font-size: var(--testo-size);  /*Regola la dimensione del testo */
 
                             
                         /* ==== ultima modifica prima del push 16:16 NMS factor
