Correggi la sintassi CSS aggiungendo un punto e virgola mancante alla proprietà font-family nel footer di writer-guide.html

--- a/writer-guide.html
+++ b/writer-guide.html
@@ -201,7 +201,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     padding-right: 1%;
                     align-items: center;
                     text-align: left;
-                    font-family: var(--accent-font)
+                    font-family: var(--accent-font);
                     background-color: var(--info-background);
                     color: var(--info-text);
                     margin: 0;
