Aggiorna la versione del progetto a v3.0 in header.html e index.html, modifica i riferimenti ai file CSS e aggiungi live.html come nuova pagina di benvenuto.

--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v2.1
+# Version: v3.0
 # URL: https://genialabile.com/header.html
 ===============================================================================
 -->
@@ -37,18 +37,18 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
 
-    <!-- Icons and Fonts 
+    <!-- Icons and Fonts --> 
     <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" " type="image/x-icon">
     <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" " type="image/png">
-    -- Fonts -->
+    <!-- Icons and Fonts --> 
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap"></noscript>
     <link rel="preload" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"></noscript>
 
     <!-- CSS -->
-    <link rel="preload" href="https://genialabile.com/master.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://genialabile.com/master.css"></noscript>
+    <link rel="preload" href="https://genialabile.com/live-style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://genialabile.com/live-stile.css"></noscript>
     
     <!-- Style effect graduated //
         <script>
@@ -56,13 +56,13 @@ Use, distribution, or modification of this project is strictly prohibited withou
         </script>
     // Style effect graduated -->
 
-     <!-- Redirect to SSL -->
+     <!-- Redirect to SSL // 
         <script>
             if (location.protocol === 'http:') {
                 location.replace(`https://${location.hostname}${location.pathname}${location.search}`);
             }
         </script>
-    <!-- Redirect to SSL -->
+    // Redirect to SSL -->
     
 
 <!---// ENDLINE & SAY BYE //--->
