rimosso padding destro

--- a/writer-guide.html
+++ b/writer-guide.html
@@ -198,7 +198,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     padding-bottom: 0rem;  
                     padding-top: 0rem; 
                     /* padding-left: 2%; */
-                    padding-right: 1%;
+                    /* padding-right: 1%; */
                     align-items: center;
                     text-align: left;
                     font-family: var(--accent-font);
