--- a/writer-guide.html
+++ b/writer-guide.html
@@ -369,7 +369,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 /* ==== ultima modifica prima del push 16:16 NMS factor
                         ================================ */
 
-                box-shadow: 0 -2px 10px rgba(36, 36, 36, 0.3);
+                box-shadow: 0 -2px 10px #00ff00;/* rgba(36, 36, 36, 0.3);*/
                 z-index: 1000;
                 transition: transform 0.3s ease-in-out;
                 transform: translateY(100%); /* Footer nascosto inizialmente */
@@ -383,7 +383,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
             #footer-banner #footer-content {
 
-                width: 100vw;
+                width: 100%;
 
                 margin-top: var(--foot-margin); /* 0rem; /* Riduce lo spazio superiore */
                 margin-bottom: var(--foot-margin); /*0rem; /* Riduce lo spazio inferiore */
@@ -393,28 +393,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 line-height: 1.6; /* Altezza linea coerente */
             }
 
-            /*--// FOOTER BUTTONS //---
-            .footer-btn {
-                background-color: var(--info-text); /* Usa il colore del testo per il background 
-                color: var(--info-background); /* Usa il colore di sfondo per il testo del pulsante 
-                border: none;
-                padding: 0.3rem 0.6rem;
-                margin: 0.5rem;
-                font-size: var(--testo-size); /* Usa la dimensione del testo del CSS master 
-                font-weight: bold;
-                cursor: pointer;
-                border-radius: 3px;
-                box-shadow: var(--box-shadow); /* Usa lo stesso box-shadow del CSS master 
-                transition: background-color 0.3s ease;
-            }
-
-            .footer-btn:hover {
-                background-color: var(--accent); /* Usa il colore di accento del CSS master 
-                color: var(--info-background); /* Mantieni il contrasto coerente 
-            }
-            ---// FOOTER BUTTONS //--- */
-
-
+          
 
 
             /*---// FOOTER BANNER //--- */
