foot-style.css con nuove informazioni e stili

--- a/footer.html
+++ b/footer.html
@@ -23,9 +23,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 <!--// STARTLINE & SAY HI //--->
 
-    <p>
+    <p> © 2025 GENiALABILE by seiseisette. All Rights Reserved.
+         <!--
         © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
         Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
+    -->
     </p>
 
     <!--MUST-->
