--- a/writer-guide.html
+++ b/writer-guide.html
@@ -369,7 +369,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 /* ==== ultima modifica prima del push 16:16 NMS factor
                         ================================ */
 
-                box-shadow: 0 -2px 10px #00ff00;/* rgba(36, 36, 36, 0.3);*/
+                box-shadow: 0 -2px 10px -2px #00ff00;/* rgba(36, 36, 36, 0.3);*/
                 z-index: 1000;
                 transition: transform 0.3s ease-in-out;
                 transform: translateY(100%); /* Footer nascosto inizialmente */
