--- a/writer-guide.html
+++ b/writer-guide.html
@@ -368,8 +368,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 padding: var(--spacing); /* Usa la stessa spaziatura del CSS master */
                 /* ==== ultima modifica prima del push 16:16 NMS factor
                         ================================ */
-                box-shadow: 0 -2px 10px #f4f4f450, /* Parte superiore */
-                            -2 -2 -2  #000000;        /* Elimina tutte le altre parti */
+                box-shadow: 0 -2px 10px #00ff00, /* Parte superiore */
+                            2px 0 10px #000000, /* Ombra sinistra (blu) */
+                            2px 0 10px #000000,  /* Ombra destra (blu) */
+                            0 2px 10px #000000;  /* Ombra inferiore (rossa) */       /* Elimina tutte le altre parti */
                 /* box-shadow: 0 -2px 10px -2px #00ff00;/* rgba(36, 36, 36, 0.3);*/
                 z-index: 1000;
                 transition: transform 0.3s ease-in-out;
