--- a/writer-guide.html
+++ b/writer-guide.html
@@ -369,9 +369,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 /* ==== ultima modifica prima del push 16:16 NMS factor
                         ================================ */
                 box-shadow: 0 -2px 10px #00ff00, /* Parte superiore */
-                           -2px 0 10px #0000ff,  /* Ombra sinistra (blu) */
-                            2px 0 10px #ccff00,   /* Ombra destra (blu) */
-                            0 2px 10px #ff0000;   /* Ombra inferiore (rossa) */ /* Ombra inferiore (rossa) */       /* Elimina tutte le altre parti */
+                           -2px 0 20px #000000,  /* Ombra sinistra (blu) */
+                            2px 0 20px #000000,   /* Ombra destra (blu) */
+                            0 2px 20px #000000;   /* Ombra inferiore (rossa) */ /* Ombra inferiore (rossa) */       /* Elimina tutte le altre parti */
                 /* box-shadow: 0 -2px 10px -2px #00ff00;/* rgba(36, 36, 36, 0.3);*/
                 z-index: 1000;
                 transition: transform 0.3s ease-in-out;
