--- a/writer-guide.html
+++ b/writer-guide.html
@@ -359,7 +359,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 bottom: 0;
                 left: 0; /* Assicura che il footer parta da sinistra */
                 right: 0; /* Assicura che il footer termini a destra */
-                width: 100%; /* Garantisce che il footer occupi l'intera larghezza */
+                
+                width: calc(100%+20px);
+                 /* Garantisce che il footer occupi l'intera larghezza */
                 background-color: var(--info-background);
                 color: var(--info-text);
                 text-align: center;
@@ -368,6 +370,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 padding: var(--spacing); /* Usa la stessa spaziatura del CSS master */
                 /* ==== ultima modifica prima del push 16:16 NMS factor
                         ================================ */
+                outline: 1px solid red; /* Per verificare se le ombre nere sono visibili */
+                
                 box-shadow: 0 -2px 10px #00ff00, /* Parte superiore */
                            -5px 0 20px 10px #000000,  /* Ombra sinistra (blu) */
                             5px 0 20px 10px #000000,   /* Ombra destra (blu) */
