--- a/footer.html
+++ b/footer.html
@@ -31,8 +31,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     </p>
 
     <!--MUST-->
-        <p class="imp-p txt-mini">
-            <a href="https://genialabile.com/" aria-label="Back">/<</a>
+        <p class="imp-p">
+            <a href="https://genialabile.com/previous-page" aria-label="Back">/<</a>
             |
             <a href="https://genialabile.com/" class="link-static" aria-label="Home Static">HOME</a>
             <a href="https://genialabile.com/live" class="link-live" aria-label="Home Live"></a>LIVE</a>
@@ -47,7 +47,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             |
             <a href="https://genialabile.com/terms-and-conditions" aria-label="Terms & Conditions">USE</a>
             |
-            <a href="https://genialabile.com/" aria-label="Next">/></a>
+            <a href="https://genialabile.com/next-page" aria-label="Next">/></a>
         </p>
     <!--MUST-->
 
