Aggiorna il footer in footer.html e modifica il titolo in writer-guide.html per riflettere la versione live; aggiungi script per gestire le classi della pagina.

--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 <!--// STARTLINE & SAY HI //--->
 
-    <p> © 2025 GENiALABILE by seiseisette. All Rights Reserved.
+    <p class="imp-p txt-mini"></p>> 
+        © 2025 GENiALABILE by seiseisette. All Rights Reserved.
          <!--
         © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
         Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
@@ -31,7 +32,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     </p>
 
     <!--MUST-->
-        <p class="imp-p">
+        <p class="imp-p txt-mini">
             <a href="https://genialabile.com/previous-page" aria-label="Back">/<</a>
             |
             <a href="https://genialabile.com/" class="link-static" aria-label="Home Static">HOME</a>
